Bug 435782 - Order of columns in "Configure columns" window is not remembered
Summary: Order of columns in "Configure columns" window is not remembered
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-15 16:37 UTC by Patrick Silva
Modified: 2021-05-03 11:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (2.41 MB, video/webm)
2021-04-26 12:02 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-04-15 16:37:20 UTC
SUMMARY
We can change the order of the columns available in "Configure columns" window
by dragging and dropping them, but System Monitor forgets the change when restarted.

STEPS TO REPRODUCE
1. open System Monitor
2. right click on any column in Overiew/Applications/Processes views and click on "Configure columns..."
3. drag any row up/down and drop it
4. click on "OK" button
5. restart System Monitor
6. reopen "Configure columns" window in the same view used in the step 2

OBSERVED RESULT
change done in the step 3 was forgotten

EXPECTED RESULT
remember the change done in the step 3

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 David Redondo 2021-04-19 14:02:34 UTC
Hmm works for me with latest master, but I discovered another bug in the testing process (https://invent.kde.org/plasma/plasma-systemmonitor/-/merge_requests/119/)
Comment 2 David Redondo 2021-04-26 09:54:05 UTC
Could you test again?
Comment 3 Patrick Silva 2021-04-26 12:02:17 UTC
Created attachment 137925 [details]
screen recording

Currently I can only reproduce in Overview view.
I'm attaching a screen recording.
Comment 4 David Redondo 2021-04-26 12:03:41 UTC
Does it matter if it's a hidden or visible column?
Comment 5 Patrick Silva 2021-04-26 12:12:12 UTC
No. I can reproduce with hidden and visible columns.
Comment 6 Arjen Hiemstra 2021-05-03 11:11:04 UTC
Git commit 0bbdfff2a35c80d43e284a723fd37745ede183ff by Arjen Hiemstra.
Committed on 03/05/2021 at 11:10.
Pushed by ahiemstra into branch 'master'.

Force save the face configuration if the face asked for it

Apparently ConfigSkeletonLoader will sometimes skip saving even if there
are changes. So force it to save if the face has requested saving to be
forced on destruction.

M  +12   -8    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/0bbdfff2a35c80d43e284a723fd37745ede183ff