Force save the face configuration if the face asked for it

Apparently ConfigSkeletonLoader will sometimes skip saving even if there
are changes. So force it to save if the face has requested saving to be
forced on destruction.

BUG: 435782